# openGLPlayground

./: .gitignore  CMakeLists.txt  Makefile  main  main.cpp  readme.md
dependencies/include/glad/: glad.h
src/: config.cpp  config.h  glad.c  main.cpp
src/meshes/: triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
